# SOAPpy-py3

./: .gitignore  CHANGES.txt  pipbuild.sh  publish.sh  pyproject.toml  setup.py  setup.py.old
bid/: inventoryClient.py  inventoryServer.py  monitorClient.py
contrib/: soap_cli.py  soap_handler.py
src/SOAPpy/: Client.py  Config.py  Errors.py  GSIServer.py  NS.py  Parser.py  SOAP.py  SOAPBuilder.py  Server.py  TwistedSOAPProxy.py  TwistedSOAPPublisher.py  Types.py  Utilities.py  __init__.py  version.py
tests/: BabelfishWSDLTest.py  Bug1001646.py  Bug916265.py  Bug918216.py  GoogleTest.py  SOAPtest.py  ZeroLengthArray.py  alanbushTest.py  cardClient.py  cardServer.py  echoClient.py  echoHeader.py  echoServer.py  esj_test_client.py  esj_test_server.py  largeDataTest.py  newsTest.py  quoteTest.py  simpleWSDL.py  speedTest.py  storageTest.py  testClient1.py  testWSDL.py  testleak.py  testsclient.py  translateTest.py  weatherTest.py  whoisTest.py  xmethods.py
tools/: interop2html.py
validate/: silabclient.py  silabserver.py  soapware.py
zope/: zope-soap-client.py
